Добавлены тесты для контроллера user

--- a/.env.testing
+++ b/.env.testing
@@ -7,7 +7,7 @@ APP_URL=http://127.0.0.1:8000
 LOG_CHANNEL=stack
 
 DB_CONNECTION=sqlite
-DB_DATABASE=/home/mikhail/Документы/work/planner/database/database-testing.sqlite
+DB_DATABASE=C:\work\php\планировщик\planner\database\database-testing.sqlite
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -41,4 +41,4 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 PASSPORT_LOGIN_ENDPOINT = http://127.0.0.1:8000/oauth/token
 PASSPORT_CLIENT_ID = 2
-PASSPORT_CLIENT_SECRET = ze1rTT5Y9jKsrhuqjvTPJT9iYlgKqIScEKK9BG0b
+PASSPORT_CLIENT_SECRET = oSvP1jOmiItwyLQ8HPqf7bGJnGPDNLdqWgLfgMUW
