--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "font-awesome": "^4.7.0"
+        "font-awesome": "^4.7.0",
+        "vue-router": "^3.1.5",
+        "vuex": "^3.1.2"
     }
 }
