--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dependencies": {
         "font-awesome": "^4.7.0",
         "vue-router": "^3.1.5",
+        "vuelidate": "^0.7.5",
         "vuex": "^3.1.2"
     }
 }
