--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "font-awesome": "^4.7.0",
         "material-icons": "^0.3.1",
         "vue-router": "^3.1.5",
+        "vue2-datepicker": "^3.3.1",
         "vuelidate": "^0.7.5",
         "vuex": "^3.1.2"
     }
